option('enable-session-example', type : 'boolean', value : false, description : 'Enable session example')
option('enable-bash-completion', type : 'boolean', value : true, description : 'Enable bash completion')
option('enable-udev-rules', type: 'boolean', value: true, description: 'Install udev rules')
option('enable-systemd', type : 'boolean', value : true, description : 'Enable systemd integration')
option('enable-libcolordcompat', type : 'boolean', value : false, description : 'Enable libcolordcompat.so which is used by ArgyllCMS')
option('enable-argyllcms-sensor', type : 'boolean', value : true, description : 'Enable ArgllCMS sensor')
option('enable-reverse', type : 'boolean', value : false, description : 'Enable reverse engineering tools')
option('enable-sane', type : 'boolean', value : false, description : 'Enable SANE support')
option('enable-vala', type : 'boolean', value : false, description : 'Build vala bindings')
option('enable-print-profiles', type : 'boolean', value : false, description : 'Build extra print profiles')
option('enable-tests', type : 'boolean', value : true, description : 'Build self tests')
option('enable-installed-tests', type : 'boolean', value : false, description : 'Install tests')
option('with-daemon-user', type : 'string', value : 'root', description : 'User for running the colord daemon')
option('with-pnp-ids', type : 'string', value : '', description : 'Location of pnp.ids if hwdb is not available')
option('enable-man', type : 'boolean', value : true, description : 'Generate man pages')
option('enable-docs', type : 'boolean', value : true, description : 'Generate documentation')
